infra/k8s/product-catalog-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: raghugowda/product-service

---
apiVersion: v1
kind: Service
metadata:
  name: product-srv
spec:
  selector:
    app: product-service
  type: ClusterIP
  ports:
    - name: product-service
      protocol: TCP
      port: 3001
      targetPort: 3001
