infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
   - host: product.local
     http:
       paths:
         - path: /api/product/?(.*)
           pathType: Prefix
           backend:
             service:
               name: product-srv
               port:
                 number: 3001
